--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 	</div>
 	</div>
 	<script src='application/game.js'></script>
+	<script src='application/graphical.js'></script>
 	<script src='application/actions.js'></script>
 	<script>
 		init();
 		document.getElementById('loading').style.display="none";
 		animate();
 		actions();
-		// .innerHTML='&#'+(10121+n).toString()+';';
 	</script>
 </body>
 </html>
